# merw

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  merw.cpp  merw.h  merw.pro  slic.cpp  slic.h
src/: Merw.cpp  Merw.h  Superpixel.cpp  Superpixel.h  image_helper.h  image_utils.h  main.cpp  merw.h  utils.h
